update Module::Install and friends

--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,12 @@ abstract: 'Filter history by type on ticket display page'
 author:
   - 'Christian Loos <cloos@netsandbox.de>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
 distribution_type: module
-generated_by: 'Module::Install version 1.01'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
