--- a/META.yml
+++ b/META.yml
@@ -23,4 +23,5 @@ requires:
   perl: 5.8.3
 resources:
   license: http://dev.perl.org/licenses/
+  repository: https://github.com/cloos/RT-Extension-HistoryFilter
 version: 1.00
