--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+generated_by: 'Module::Install version 1.10'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,3 +25,5 @@ resources:
   license: http://dev.perl.org/licenses/
   repository: https://github.com/cloos/RT-Extension-HistoryFilter
 version: 1.00
+x_module_install_rtx_version: 0.35
+x_requires_rt: 4.0.0
