--- a/META.yml
+++ b/META.yml
@@ -19,6 +19,8 @@ no_index:
     - etc
     - html
     - inc
+  package:
+    - RT::Transaction
 requires:
   perl: 5.8.3
 resources:
@@ -27,3 +29,4 @@ resources:
 version: 1.00
 x_module_install_rtx_version: 0.35
 x_requires_rt: 4.0.0
+x_rt_too_new: 4.4.0
