--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.10'
+generated_by: 'Module::Install version 1.16'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,7 +26,7 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: https://github.com/cloos/RT-Extension-HistoryFilter
-version: 1.01
-x_module_install_rtx_version: 0.35
+version: '1.01'
+x_module_install_rtx_version: '0.37'
 x_requires_rt: 4.0.0
 x_rt_too_new: 4.4.0
