--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-blib/
-Makefile
-Makefile.old
-MANIFEST.bak
-MYMETA.*
-pm_to_blib
+/blib/
+/Makefile
+/Makefile.old
+/MANIFEST.bak
+/MYMETA.*
+/pm_to_blib
+/xt/lib/RT/Extension/HistoryFilter/Test.pm
+/xt/tmp/
